Ensure rows-per-page dropdown can shows all digits without truncation

--- a/html/css/app.css
+++ b/html/css/app.css
@@ -54,6 +54,7 @@
 
 .v-list-item__title {
   font-size: 15px !important;
+  min-width: 7ch;
 }
 
 .v-chip .v-avatar {
